all caption is done

--- a/galeri.html
+++ b/galeri.html
@@ -39,8 +39,8 @@
                     Galeri Kami
                 </h2>
                 <p class="text-lg sm:text-xl text-gray-600 max-w-3xl mx-auto">
-                    Lihat lebih dekat fasilitas, ternak, dan kegiatan di<br class="hidden sm:block">
-                    Peternakan ini Polije.
+                    Lihat lebih dekat fasilitas, ternak, dan seluruh dokumentasi<br class="hidden sm:block">
+                    kegiatan harian di TEFA Feedlot & Sapi Perah Polije  
                 </p>
             </div>
         </div>
