--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beranda - Tefa Peternakan Sapi Polije</title>
+    <title>Beranda - TEFA FeedLot & Sapi Perah Polije</title>
     <meta name="description"
         content="TEFA FEEDLOT DAN SAPI PERAH POLITEKNIK NEGERI JEMBER - Teaching Factory yang menghadirkan produk berkualitas tinggi dengan standar modern dan inovasi terbaik.">
 
@@ -36,7 +36,7 @@
         style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('assets/images/upload-wa/hero.jpg') center/cover no-repeat;">
         <div class="text-center px-4 animate-fade-in">
             <h2 class="text-4xl sm:text-5xl md:text-6xl font-bold mb-4 leading-tight animate-fade-in">
-                Peternakan Sapi Perah<br>& Potong Polije
+                TEFA Feedlot &<br> Sapi Perah Polije
             </h2>
             <p class="text-lg sm:text-xl mb-8 max-w-2xl mx-auto animate-fade-in" style="animation-delay: 0.2s;">
                 Teaching Factory yang menghadirkan produk berkualitas tinggi dengan<br class="hidden sm:block">
@@ -55,7 +55,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-12 scroll-animate fade-up">
                 <h3 class="text-3xl sm:text-4xl font-bold text-gray-800 mb-4">
-                    Selamat Datang di Peternakan Polije
+                    Selamat Datang di TEFA Feedlot dan Sapi Perah POLIJE
                 </h3>
                 <p class="text-lg text-gray-600 max-w-3xl mx-auto">
                     Inovasi, Edukasi, dan Kualitas dalam Satu Atap
@@ -339,7 +339,7 @@
                 <div class="faq-item bg-gray-50 rounded-lg overflow-hidden">
                     <button
                         class="faq-question w-full text-left px-6 py-4 flex justify-between items-center hover:bg-gray-100 transition-colors">
-                        <span class="font-semibold text-gray-800">Bagaimana cara membeli produk dari Peternakan
+                        <span class="font-semibold text-gray-800">Bagaimana cara membeli produk dari Tefa Sapi
                             Polije?</span>
                         <svg class="w-5 h-5 text-gray-600 transition-transform duration-200" fill="none"
                             stroke="currentColor" viewBox="0 0 24 24">
