--- a/fasilitas.html
+++ b/fasilitas.html
@@ -39,8 +39,8 @@
                     Fasilitas Kami
                 </h2>
                 <p class="text-lg sm:text-xl text-gray-600 max-w-3xl mx-auto">
-                    Didukung oleh infrastruktur modern untuk menjamin<br class="hidden sm:block">
-                    kualitas dan efisiensi.
+                   Infrastruktur modern dan menjamin kualitas<br class="hidden sm:block">
+                    efisiensi produksi dan praktik edukasi terbaik.
                 </p>
             </div>
         </div>
