--- a/tentang.html
+++ b/tentang.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tentang Kami - Tefa Peternakan Sapi Polije</title>
+    <title>Tentang Kami - TEFA FeedLot & Sapi Perah Polije</title>
     <meta name="description"
         content="Tentang TEFA FEEDLOT DAN SAPI PERAH POLITEKNIK NEGERI JEMBER - Mengintegrasikan pendidikan, penelitian, dan produksi peternakan modern.">
 
@@ -54,18 +54,18 @@
                 <div class="space-y-8 scroll-animate fade-right">
                     <div>
                         <h3 class="text-2xl sm:text-3xl font-bold text-gray-800 mb-6">
-                            Tentang Peternakan Sapi Perah<br>dan Sapi Potong
+                            Tentang TEFA Feedlot<br>dan Sapi Perah
                         </h3>
 
                         <!-- Sejarah & Tujuan Awal -->
                         <div class="mb-6">
                             <h4 class="text-lg font-bold text-gray-800 mb-3">Sejarah & Tujuan Awal:</h4>
                             <p class="text-gray-600 leading-relaxed">
-                                Peternakan sapi perah dan potong ini dibangun atas inisiatif Unit Pengelolaan Peternakan
+                                TEFA Feedlot dan Sapi Perah ini dibangun atas inisiatif Unit Pengelolaan Peternakan
                                 Politeknik Negeri Jember. Awalnya hanya ditujukan untuk mendukung kegiatan akademis
                                 mahasiswa, yaitu laboratorium hidup bagi mahasiswa untuk belajar dan mengasah
                                 keterampilan mereka dalam pengelolaan peternakan serta pemahaman perawatan sapi secara
-                                langsung mengintegrasikan konsep Teaching Factory (TeFa) yang menggabungkan fungsi
+                                langsung mengintegrasikan konsep Teaching Factory (TEFA) yang menggabungkan fungsi
                                 pendidikan dan unit bisnis.
                             </p>
                         </div>
@@ -83,9 +83,9 @@
 
                         <!-- Teaching Factory -->
                         <div>
-                            <h4 class="text-lg font-bold text-gray-800 mb-3">Teaching Factory (TeFa):</h4>
+                            <h4 class="text-lg font-bold text-gray-800 mb-3">Teaching Factory (TEFA):</h4>
                             <p class="text-gray-600 leading-relaxed">
-                                Sebagai TeFa, kami tidak hanya berfungsi untuk unit bisnis, tetapi juga menjadi tempat
+                                Sebagai TEFA, kami tidak hanya berfungsi untuk unit bisnis, tetapi juga menjadi tempat
                                 pembelajaran, penelitian, dan pengembangan masyarakat. Dengan kapasitas kandang 90-40
                                 ekor sapi, kami mengelola laboratorium hidup bagi mahasiswa untuk belajar dan
                                 berprestasi langsung di lapangan.
