--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                     <!-- Map Placeholder -->
                     <div class="bg-white rounded-xl shadow-lg p-2 overflow-hidden">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.2872583582745!2d113.71917731477704!3d-8.160201994192252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd695b617d8f623%3A0xf6c4437632474338!2sPoliteknik%20Negeri%20Jember!5e0!3m2!1sid!2sid!4v1234567890123!5m2!1sid!2sid"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d806.2355241744458!2d113.72454894980955!3d-8.156215578086801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd695a4e623a67b%3A0x776a7173741f28e0!2sUnit%20Penggemukan%20Sapi%20Politeknik%20Negeri%20Jember!5e0!3m2!1sid!2sid!4v1764419276510!5m2!1sid!2sid"
                             width="100%" height="300" style="border:0; border-radius: 0.5rem;" allowfullscreen=""
                             loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                         </iframe>
