feat: Add new footer component and update project name to 'Tefa Feedlot dan Sapi Perah Polije' across multiple pages.

--- a/fasilitas.html
+++ b/fasilitas.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fasilitas - Tefa Peternakan Sapi Polije</title>
+    <title>Fasilitas - Tefa Feedlot dan Sapi Perah Polije</title>
     <meta name="description"
         content="Fasilitas TEFA FEEDLOT DAN SAPI PERAH POLITEKNIK NEGERI JEMBER - Didukung oleh infrastruktur modern untuk menjamin kualitas dan efisiensi.">
 
