--- a/galeri.html
+++ b/galeri.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeri - Tefa Peternakan Sapi Polije</title>
+    <title>Galeri - Tefa Feedlot dan Sapi Perah Polije</title>
     <meta name="description"
         content="Galeri foto TEFA FEEDLOT DAN SAPI PERAH POLITEKNIK NEGERI JEMBER - Lihat lebih dekat fasilitas, ternak, dan kegiatan di Peternakan ini Polije.">
 
