--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                         </svg>
                     </div>
                     <p class="text-gray-600 mb-4 italic">
-                        "Pengalaman magang di TEFA Peternakan Polije memberikan insights banyak tentang manajemen
+                        "Pengalaman magang di TEFA Feedlot dan Sapi Perah Polije memberikan insights banyak tentang manajemen
                         peternakan."
                     </p>
                     <div class="pt-4 border-t border-gray-200">
