--- a/kontak.html
+++ b/kontak.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontak - Tefa Peternakan Sapi Polije</title>
+    <title>Kontak - Tefa Feedlot dan Sapi Perah Polije</title>
     <meta name="description"
         content="Hubungi TEFA FEEDLOT DAN SAPI PERAH POLITEKNIK NEGERI JEMBER - Kami siap mendengar dari Anda. Jangan ragu untuk menghubungi kami.">
 
