--- a/produk-layanan.html
+++ b/produk-layanan.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Produk & Layanan - Tefa Peternakan Sapi Polije</title>
+    <title>Produk & Layanan - Tefa Feedlot dan Sapi Perah Polije</title>
     <meta name="description"
         content="Produk & Layanan TEFA FEEDLOT DAN SAPI PERAH POLITEKNIK NEGERI JEMBER - Kualitas terbaik dari peternakan modern yang mengintegrasikan pendidikan dan teknologi.">
 
