feat: Update product title and description from 'Sapi Potong & Perah' to 'Sapi Perah' on index and product pages.

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                             </svg>
                         </div>
                     </div>
-                    <h4 class="text-xl font-bold text-gray-800 text-center mb-3">Sapi Potong & Perah</h4>
+                    <h4 class="text-xl font-bold text-gray-800 text-center mb-3">Sapi Perah</h4>
                     <p class="text-gray-600 text-center mb-4">
-                        Kamitahkan utama sapi Potong sapi perah termasuk jenisnya PO (Peranakan Ongole) yang berkualitas
-                        unggulam.
+                        Kami menawarkan sapi perah berkualitas tinggi, termasuk sapi PO (Peranakan Ongole) yang menjadi
+                        keunggulan produk kami.
                     </p>
                     <p class="text-sm text-gray-500 text-center">
                         Produk unggulan untuk kebutuhan daging dan susu hasil yang berkualitas.
