--- a/produk-layanan.html
+++ b/produk-layanan.html
@@ -50,7 +50,7 @@
     <section class="py-16 sm:py-20 bg-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-6">
-                <!-- Product 1: Sapi Potong & Perah -->
+                
                 <div
                     class="product-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate zoom-in">
                     <div class="flex justify-center mb-4">
@@ -62,9 +62,10 @@
                             </svg>
                         </div>
                     </div>
-                    <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Sapi Potong & Perah</h3>
+                    <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Sapi Perah</h3>
                     <p class="text-gray-600 text-center leading-relaxed text-sm">
-                        Pemeliharaan dapat mendorong bisnis yang efektif di baik dari pilih yang berkualitas unggul.
+                        Kami menawarkan sapi perah berkualitas tinggi, termasuk sapi PO (Peranakan Ongole) yang menjadi
+                        keunggulan produk kami.
                     </p>
                 </div>
 
