feat: Update YouTube iframe to enable autoplay and JavaScript API

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="order-2 md:order-1 scroll-animate fade-right">
                     <div class="rounded-lg shadow-xl overflow-hidden">
                         <div class="aspect-video">
-                            <iframe class="w-full h-full" src="https://www.youtube.com/embed/jSaSBXS3_fg?si=HnOdsSR1k_A9wZmk&amp;start=3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            <iframe id="youtube-video" class="w-full h-full" src="https://www.youtube.com/embed/jSaSBXS3_fg?si=HnOdsSR1k_A9wZmk&amp;start=3&autoplay=1&mute=0&enablejsapi=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                 allowfullscreen></iframe>
                         </div>
                     </div>
