--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 Teaching Factory yang menghadirkan produk berkualitas tinggi dengan<br class="hidden sm:block"> standar modern dan inovasi terbaik untuk masyarakat
             </p>
             <a href="tentang.html" class="inline-block bg-green-700 hover:bg-green-800 text-white font-semibold px-8 py-3 rounded-full transition-all duration-300 transform hover:scale-105 shadow-lg animate-fade-in" style="animation-delay: 0.4s;">
-                Pelajari Lebih Lanjut
+                Kenali Kami Lebih Dekat
             </a>
         </div>
     </section>
@@ -76,7 +76,7 @@
                         </p>
                     </div>
                     <a href="tentang.html" class="inline-block bg-green-700 hover:bg-green-800 text-white font-semibold px-6 py-3 rounded-lg transition-all duration-300 shadow-md hover:shadow-lg">
-                        Selengkapnya Lebih Jauh
+                        Selengkapnya Tentang Kami
                     </a>
                 </div>
             </div>
@@ -99,13 +99,18 @@
                 <!-- Produk 1 -->
                 <div class="product-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate zoom-in">
                     <div class="flex justify-center mb-4">
-                        <div class="w-16 h-16 bg-green-100 rounded-full flex items-center justify-center">
+                        <!-- <div class="w-16 h-16 bg-green-100 rounded-full flex items-center justify-center">
                             <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6">
                                 </path>
                             </svg>
-                        </div>
+                        </div> -->
+
+                     <div class="w-16 h-16 bg-black rounded-full flex items-center justify-center">
+                     <img src="assets/images/sapiFix.png" class="w-64 h-64 object-contain" alt="">
+                     </div>
+
                     </div>
                     <h4 class="text-xl font-bold text-gray-800 text-center mb-3">Sapi Perah</h4>
                     <p class="text-gray-600 text-center mb-4">
@@ -158,7 +163,7 @@
 
             <div class="text-center mt-10 scroll-animate fade-up">
                 <a href="produk-layanan.html" class="inline-block bg-green-700 hover:bg-green-800 text-white font-semibold px-8 py-3 rounded-lg transition-all duration-300 shadow-md hover:shadow-lg">
-                    Lihat Lebih Lengkap
+                    Lihat Lebih Banyak
                 </a>
             </div>
         </div>
