feat: Replace product and service SVG icons with dedicated images and add new image assets.

--- a/produk-layanan.html
+++ b/produk-layanan.html
@@ -51,16 +51,11 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-6">
                 
+                <!-- Product 1: Sapi Perah -->
                 <div
                     class="product-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate zoom-in">
-                    <div class="flex justify-center mb-4">
-                        <div class="w-16 h-16 bg-green-100 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6">
-                                </path>
-                            </svg>
-                        </div>
+                    <div class="-mx-6 -mt-6 mb-6">
+                        <img src="assets/images/upload-wa/sapi-perah.jpg" alt="Sapi Perah" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Sapi Perah</h3>
                     <p class="text-gray-600 text-center leading-relaxed text-sm">
@@ -72,14 +67,8 @@
                 <!-- Product 2: Susu Segar -->
                 <div
                     class="product-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate zoom-in" style="transition-delay: 0.1s;">
-                    <div class="flex justify-center mb-4">
-                        <div class="w-16 h-16 bg-green-50 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10">
-                                </path>
-                            </svg>
-                        </div>
+                    <div class="-mx-6 -mt-6 mb-6">
+                        <img src="assets/images/produk-layanan/susu-segar.png" alt="Susu Segar" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Susu Segar</h3>
                     <p class="text-gray-600 text-center leading-relaxed text-sm">
@@ -90,13 +79,8 @@
                 <!-- Product 3: Pupuk Organik -->
                 <div
                     class="product-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate zoom-in" style="transition-delay: 0.2s;">
-                    <div class="flex justify-center mb-4">
-                        <div class="w-16 h-16 bg-green-50 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M20 7l-8-4-8 4m16 0l-8 4m8-4v10l-8 4m0-10L4 7m8 4v10M4 7v10l8 4"></path>
-                            </svg>
-                        </div>
+                    <div class="-mx-6 -mt-6 mb-6">
+                        <img src="assets/images/upload-wa/pupuk.jpg" alt="Pupuk Organik" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Pupuk Organik</h3>
                     <p class="text-gray-600 text-center leading-relaxed text-sm">
@@ -107,14 +91,8 @@
                 <!-- Product 4: Rempah Pakan -->
                 <div
                     class="product-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate zoom-in" style="transition-delay: 0.3s;">
-                    <div class="flex justify-center mb-4">
-                        <div class="w-16 h-16 bg-green-50 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z">
-                                </path>
-                            </svg>
-                        </div>
+                    <div class="-mx-6 -mt-6 mb-6">
+                        <img src="assets/images/upload-wa/chopper.jpg" alt="Rempah Pakan" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Rempah Pakan</h3>
                     <p class="text-gray-600 text-center leading-relaxed text-sm">
@@ -141,14 +119,8 @@
                 <!-- Service 1: Praktik Mahasiswa -->
                 <div
                     class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-100 scroll-animate fade-up">
-                    <div class="flex justify-center mb-4">
-                        <div class="w-16 h-16 bg-green-100 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z">
-                                </path>
-                            </svg>
-                        </div>
+                    <div class="-mx-6 -mt-6 mb-6">
+                        <img src="assets/images/upload-wa/praktik.jpg" alt="Praktik Mahasiswa" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Praktik Mahasiswa</h3>
                     <p class="text-gray-600 text-center leading-relaxed text-sm">
@@ -159,14 +131,8 @@
                 <!-- Service 2: Riset & Inovasi -->
                 <div
                     class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-100 scroll-animate fade-up" style="transition-delay: 0.1s;">
-                    <div class="flex justify-center mb-4">
-                        <div class="w-16 h-16 bg-green-50 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z">
-                                </path>
-                            </svg>
-                        </div>
+                    <div class="-mx-6 -mt-6 mb-6">
+                        <img src="assets/images/upload-wa/riset.jpg" alt="Riset & Inovasi" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Riset & Inovasi</h3>
                     <p class="text-gray-600 text-center leading-relaxed text-sm">
@@ -177,14 +143,8 @@
                 <!-- Service 3: Kemitraan Industri -->
                 <div
                     class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-100 scroll-animate fade-up" style="transition-delay: 0.2s;">
-                    <div class="flex justify-center mb-4">
-                        <div class="w-16 h-16 bg-green-50 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z">
-                                </path>
-                            </svg>
-                        </div>
+                    <div class="-mx-6 -mt-6 mb-6">
+                        <img src="assets/images/produk-layanan/kemitraan-industri.png" alt="Kemitraan Industri" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Kemitraan Industri</h3>
                     <p class="text-gray-600 text-center leading-relaxed text-sm">
@@ -195,14 +155,8 @@
                 <!-- Service 4: Layanan Edukasi -->
                 <div
                     class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-100 scroll-animate fade-up" style="transition-delay: 0.3s;">
-                    <div class="flex justify-center mb-4">
-                        <div class="w-16 h-16 bg-green-50 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253">
-                                </path>
-                            </svg>
-                        </div>
+                    <div class="-mx-6 -mt-6 mb-6">
+                        <img src="assets/images/produk-layanan/layanan-edukasi.jpg" alt="Layanan Edukasi" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Layanan Edukasi</h3>
                     <p class="text-gray-600 text-center leading-relaxed text-sm">
@@ -213,13 +167,8 @@
                 <!-- Service 5: Layanan Konsumen -->
                 <div
                     class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-100 scroll-animate fade-up" style="transition-delay: 0.4s;">
-                    <div class="flex justify-center mb-4">
-                        <div class="w-16 h-16 bg-green-50 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M13 10V3L4 14h7v7l9-11h-7z"></path>
-                            </svg>
-                        </div>
+                    <div class="-mx-6 -mt-6 mb-6">
+                        <img src="assets/images/produk-layanan/layanan-konsumen.jpg" alt="Layanan Konsumen" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Layanan Konsumen</h3>
                     <p class="text-gray-600 text-center leading-relaxed text-sm">
