--- a/index.html
+++ b/index.html
@@ -98,19 +98,8 @@
             <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Produk 1 -->
                 <div class="product-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate zoom-in">
-                    <div class="flex justify-center mb-4">
-                        <div class="w-16 h-16 bg-green-100 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6">
-                                </path>
-                            </svg>
-                        </div>
-
-                     <!-- <div class="w-16 h-16 bg-black rounded-full flex items-center justify-center">
-                     <img src="assets/images/sapiFix.png" class="w-64 h-64 object-contain" alt="">
-                     </div> -->
-
+                    <div class="-mx-6 -mt-6 mb-6">
+                        <img src="assets/images/upload-wa/sapi-perah.jpg" alt="Sapi Perah" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h4 class="text-xl font-bold text-gray-800 text-center mb-3">Sapi Perah</h4>
                     <p class="text-gray-600 text-center mb-4">
@@ -123,13 +112,8 @@
 
                 <!-- Produk 2 -->
                 <div class="product-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate zoom-in" style="transition-delay: 0.1s;">
-                    <div class="flex justify-center mb-4">
-                        <div class="w-16 h-16 bg-green-100 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M20 7l-8-4-8 4m16 0l-8 4m8-4v10l-8 4m0-10L4 7m8 4v10M4 7v10l8 4"></path>
-                            </svg>
-                        </div>
+                    <div class="-mx-6 -mt-6 mb-6">
+                        <img src="assets/images/upload-wa/susu.png" alt="Susu Segar" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h4 class="text-xl font-bold text-gray-800 text-center mb-3">Susu Segar</h4>
                     <p class="text-gray-600 text-center mb-4">
@@ -142,14 +126,8 @@
 
                 <!-- Produk 3 -->
                 <div class="product-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate zoom-in" style="transition-delay: 0.2s;">
-                    <div class="flex justify-center mb-4">
-                        <div class="w-16 h-16 bg-green-100 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z">
-                                </path>
-                            </svg>
-                        </div>
+                    <div class="-mx-6 -mt-6 mb-6">
+                        <img src="assets/images/upload-wa/pupuk.jpg" alt="Pupuk Organik" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h4 class="text-xl font-bold text-gray-800 text-center mb-3">Pupuk Organik</h4>
                     <p class="text-gray-600 text-center mb-4">
@@ -184,14 +162,8 @@
             <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Layanan 1 -->
                 <div class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 border border-gray-100 scroll-animate fade-up">
-                    <div class="flex justify-center mb-4">
-                        <div class="w-16 h-16 bg-green-50 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253">
-                                </path>
-                            </svg>
-                        </div>
+                    <div class="-mx-6 -mt-6 mb-6">
+                        <img src="assets/images/upload-wa/praktik.jpg" alt="Praktik Mahasiswa" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h4 class="text-xl font-bold text-gray-800 text-center mb-3">Praktik Mahasiswa</h4>
                     <p class="text-gray-600 text-center">
@@ -201,14 +173,8 @@
 
                 <!-- Layanan 2 -->
                 <div class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 border border-gray-100 scroll-animate fade-up" style="transition-delay: 0.1s;">
-                    <div class="flex justify-center mb-4">
-                        <div class="w-16 h-16 bg-green-50 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z">
-                                </path>
-                            </svg>
-                        </div>
+                    <div class="-mx-6 -mt-6 mb-6">
+                        <img src="assets/images/upload-wa/riset.jpg" alt="Riset & Inovasi" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h4 class="text-xl font-bold text-gray-800 text-center mb-3">Riset & Inovasi</h4>
                     <p class="text-gray-600 text-center">
@@ -218,14 +184,8 @@
 
                 <!-- Layanan 3 -->
                 <div class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 border border-gray-100 scroll-animate fade-up" style="transition-delay: 0.2s;">
-                    <div class="flex justify-center mb-4">
-                        <div class="w-16 h-16 bg-green-50 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z">
-                                </path>
-                            </svg>
-                        </div>
+                    <div class="-mx-6 -mt-6 mb-6">
+                        <img src="assets/images/produk-layanan/kemitraan-industri.png" alt="Kemitraan Industri" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h4 class="text-xl font-bold text-gray-800 text-center mb-3">Kemitraan Industri</h4>
                     <p class="text-gray-600 text-center">
